# Slate

./: .gitignore  NOTICE  README.md  release.sh
.github/workflows/: build-desktop.yml
crates/pdf-engine/: Cargo.toml
crates/pdf-engine/src/: lib.rs  pdf_compress.rs  pdf_edit.rs  pdf_engine.rs  pdf_forms.rs  pdf_ops.rs  pdf_tools.rs
scripts/: release.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: blockdbg.rs  fontdbg.rs  mcp_e2e.rs  objdbg.rs  tools_e2e.rs
src-tauri/frontend-dist/: app.js  index.html  styles.css
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llm.rs  main.rs  ocr.rs  pdf_sign.rs  system_fonts.rs  updater.rs
src-tauri/tests/: pdf_engine_tests.rs
